--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@ img {
 	padding: 9px;
 	width: 250px;
 }
+
 #navbar{
 	overflow:hidden;
 	background-color:#add8e6;
@@ -30,4 +31,14 @@ img {
 	width:95%;
 	font-size: 18px;
 }
-
+#map{
+  position: absolute;
+  width: 50%;
+  height: 500px;
+  right: 20%;
+  border: red 5px;
+  border-radius: 15px;
+}
+ul{
+  margin-left: 1em;
+  list-style-type: none;
