--- a/css/style.css
+++ b/css/style.css
@@ -47,3 +47,11 @@ ul{
   margin-left: 1em;
   list-style-type: none;
 }
+#index{
+	padding: 1em;
+	margin: auto;
+	line-height: 2;
+	text-align: auto;
+	color: blue;
+	position:relative;
+}
