--- a/css/style.css
+++ b/css/style.css
@@ -43,9 +43,14 @@ nav#horzl ul li a {
 	padding: 10px 0px 8px 0px;
 	border-radius: 4px;
 }	
+#navbar ul li{
+	list-style-type:none;
+}
 #navbar a:hover{
 	color:blue;
 	padding: 10px 	10px;
+}
+
 #map {
   position: absolute;
   width: 50%;
