--- a/css/style.css
+++ b/css/style.css
@@ -24,8 +24,8 @@ img {
 }
 nav#horzl ul {
 	list-style-type: none;
-	padding: 0;
-	margin: 0;
+	padding: 0px;
+	margin: 0px;
 	overflow: hidden;
 }
 nav#horzl ul li {
@@ -41,7 +41,7 @@ nav#horzl ul a {
 	text-align: center;
 	width: 100px;
 	padding: 15px 0px 15px 0px;
-	border-radius: 4px;
+	border-radius: 20px;
 }
 
 #navbar{
