--- a/css/style.css
+++ b/css/style.css
@@ -27,12 +27,14 @@ nav#horzl ul {
 	padding: 0px;
 	margin: 0px;
 	overflow: hidden;
+	text-decoration: none;
 }
 nav#horzl ul li {
 	float: left;
 	margin: 0 15px;
+	text-decoration: none;
 }
-nav#horzl ul a {
+nav#horzl ul li a {
 	display: block;
 	background-color: blue;
 	color: blue;
@@ -46,10 +48,12 @@ nav#horzl ul a {
 
 #navbar{
 	list-style-type:none;
+	text-decoration: none;
 }
 #navbar a:hover{
 	color:red;
 	padding: 10px 	10px;
+	text-decoration: none;
 }
 
 #map {
